@@ -1,13 +1,13 @@
-
 package co.edu.usco.TM.controller;
 
 import co.edu.usco.TM.controller.dto.MakerDTO;
-import co.edu.usco.TM.entity.Maker;
+import co.edu.usco.TM.persistence.entity.commerce.Maker;
 import co.edu.usco.TM.service.IMakerService;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -36,8 +36,13 @@ public class MakerController {
             
             MakerDTO makerDTO = MakerDTO.builder()
                     .id(maker.getId())
+                    .username(maker.getUsername())
+                    .email(maker.getEmail())
+                    .password(maker.getPassword())
+                    .role(maker.getRole())
                     .name(maker.getName())
-                    .productList(maker.getProductList())
+                    .address(maker.getAddress())
+                    .phone(maker.getPhone())
                     .build();
             
             return ResponseEntity.ok(makerDTO);
@@ -50,11 +55,16 @@ public class MakerController {
         
         List<MakerDTO> makers = makerService.findAll()
                 .stream().map(maker -> MakerDTO.builder()
-                    .id(maker.getId())
-                    .name(maker.getName())
-                    .productList(maker.getProductList())
-                    .build())
-                .toList();
+                .id(maker.getId())
+                .username(maker.getUsername())
+                .email(maker.getEmail())
+                .password(maker.getPassword())
+                .role(maker.getRole())
+                .name(maker.getName())
+                .address(maker.getAddress())
+                .phone(maker.getPhone())
+                .build())
+                .collect(Collectors.toList());
         
         return ResponseEntity.ok(makers);
     }
@@ -67,7 +77,12 @@ public class MakerController {
         }
         
         makerService.save(Maker.builder()
+                .username(makerDTO.getUsername())
+                .email(makerDTO.getEmail())
+                .password(makerDTO.getPassword())
                 .name(makerDTO.getName())
+                .address(makerDTO.getAddress())
+                .phone(makerDTO.getPhone())
                 .build());
         
         return ResponseEntity.created(new URI("/api/maker/save")).build();
@@ -80,11 +95,16 @@ public class MakerController {
         
         if (makerOptional.isPresent()) {
             Maker maker = makerOptional.get();
+            maker.setUsername(makerDTO.getUsername());
+            maker.setEmail(makerDTO.getEmail());
+            maker.setPassword(makerDTO.getPassword());
             maker.setName(makerDTO.getName());
+            maker.setAddress(makerDTO.getAddress());
+            maker.setPhone(makerDTO.getPhone());
             
             makerService.save(maker);
             
-            return ResponseEntity.ok("updated registry");
+            return ResponseEntity.ok("updated maker");
         }
         
         return ResponseEntity.notFound().build();
@@ -94,11 +114,15 @@ public class MakerController {
     @DeleteMapping("delete/{id}")
     public ResponseEntity<?> delete(@PathVariable Long id) {
         
-        if (id != null) {
+        Optional<Maker> makerOptional = makerService.findById(id);
+        
+        if (!makerOptional.isPresent()) {
+            return ResponseEntity.notFound().build();
+        } else if (id != null) {
             
             makerService.deleteById(id);
             
-            return ResponseEntity.ok("deleted registry");
+            return ResponseEntity.ok("deleted maker");
         }
         
         return ResponseEntity.badRequest().build();
